--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,20 +6,21 @@ junitVersion = "1.3.0"
 espressoCore = "3.7.0"
 lifecycleRuntimeKtx = "2.10.0"
 activityCompose = "1.12.4"
-kotlin = "2.0.21"
-composeBom = "2024.09.00"
-hilt = "2.51.1"
-room = "2.6.1"
-retrofit = "2.11.0"
-navigation = "2.8.1"
-maps = "19.0.0"
+kotlin = "2.3.10"
+composeBom = "2026.02.00"
+hilt = "2.59.2"
+room = "2.8.4"
+retrofit = "3.0.0"
+navigation = "2.9.7"
+maps = "20.0.0"
+mapsUtils = "4.1.0"
 location = "21.3.0"
-permissions = "0.36.0"
-gson = "2.11.0"
-ksp = "2.0.21-1.0.25"
+permissions = "0.37.3"
+gson = "2.13.2"
+ksp = "2.2.10-2.0.2"
 coil = "2.7.0"
-datastore = "1.1.1"
-work = "2.9.1"
+datastore = "1.2.0"
+work = "2.11.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -36,6 +37,7 @@ androidx-compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "u
 androidx-compose-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-compose-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3" }
+androidx-compose-material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended" }
 
 # Hilt
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
@@ -58,6 +60,7 @@ navigation-compose = { group = "androidx.navigation", name = "navigation-compose
 # Maps & Location
 maps-compose = { group = "com.google.maps.android", name = "maps-compose", version = "4.4.1" }
 maps-ktx = { group = "com.google.android.gms", name = "play-services-maps", version.ref = "maps" }
+maps-utils = { group = "com.google.maps.android", name = "android-maps-utils", version.ref = "mapsUtils" }
 location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "location" }
 
 # Permissions
